# demo_XGBoost_TBBE

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: 200_new_final_balance_0.csv  competitor_distances.csv  competitor_odds.csv  getXGBOOstTrainingData_0.csv  main.py  race_event_core.csv  transactions_0.csv
src/Application/: betting_agents.py
src/copy_XGBoost_TBBE.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
